@@ -2,7 +2,7 @@ Title: Survival Analysis
 Maintainer: Terry M Therneau <therneau.terry@mayo.edu>
 Priority: recommended
 Package: survival
-Version: 3.0.0
+Version: 3.0-1
 Date: 2019-03-27
 Depends: R (>= 2.13.0)
 Imports: graphics, Matrix, methods, splines, stats, utils
