@@ -155,6 +155,8 @@ SEXP gchol_inv(SEXP matrix, SEXP flag2);
 void init_doloop(int min, int max);
 int doloop      (int nloops, int *index);
 
+SEXP multicheck(SEXP y2, SEXP id2, SEXP istate2, SEXP sort2);
+
 int *norisk(int n, double *time1, double *time2, double *status, 
 	    int *sort1, int *sort2, int *strata);
 
